@@ -1,0 +1,16 @@
+<chummer>
+  <weapons>
+    <weapon>
+      <id>7fffffff-bf58-494c-88a8-5107a3210405</id>
+      <category>Shotguns</category>
+    </weapon>
+    <weapon>
+      <id>7fffffff-a4f5-4358-a0cb-7fffffff7193</id>
+      <category>Shotguns</category>
+    </weapon>
+    <weapon>
+      <id>23368c46-c374-4497-b273-61467489ab46</id>
+      <category>Shotguns</category>
+    </weapon>
+  </weapons>
+</chummer>
